ajuste de input radio

--- a/src/Styles/_component.scss
+++ b/src/Styles/_component.scss
@@ -54,6 +54,9 @@
           color: v.$color-font;
           font-weight: 700;
         }
+        .check {
+          margin-left: 20px;
+        }
         p {
           font-family: v.$font-family;
           font-size: 11px;
