--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -11,7 +11,7 @@ $bg-container: linear-gradient(
   #95f0e8
 );
 
-$color-button: #16beb3;
+$color-button: #30beb5;
 
 $bg-main: linear-gradient(
   to right bottom,
@@ -27,3 +27,19 @@ $shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 $border-color: #489696;
 
 $error: #ce2121;
+
+$bg-terminar: linear-gradient(
+  to right top,
+  #d16ba5,
+  #c777b9,
+  #ba83ca,
+  #aa8fd8,
+  #9a9ae1,
+  #8aa7ec,
+  #79b3f4,
+  #69bff8,
+  #52cffe,
+  #41dfff,
+  #46eefa,
+  #5ffbf1
+);
